Slider fixed & UI Alignment

--- a/src/app/attractions/attractions.component.css
+++ b/src/app/attractions/attractions.component.css
@@ -80,7 +80,7 @@
     text-decoration: underline;
 }
 
-.mt-4 {
+.att-desc {
     width: 500px;
     padding: 0;
     overflow: hidden;
@@ -138,6 +138,26 @@
   
 .checkbox-group label {
     margin-right: 10px;
+}
+
+.btn-sm{
+    color: white;
+    background-color: #00284d;
+    border-radius: 10px;
+    width: 150px;
+    height: 40px;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: relative;
+    text-decoration: none;
+    padding: 10px;
+}
+
+.btn-sm:hover{
+    color: white;
+    background-color: #001A33;
 }
   
 @media screen and (max-width: 767px){
